# dsa-with-python

./: mypy.ini  pyproject.toml
algorithms/dynamic_programming/: fibonnaci.py  memoization.py
algorithms/greedy/: greedy_intro.py  stations_set_problem.py
algorithms/sliding_window/: sliding.py
algorithms/two_pointers/: palindrome.py
data_structures/: aux.py  doubly_linked_lists.py  graphs.py  single_linked_lists.py  trees.py
hackerrank/backtracking/: davis_staircase.py  nth_fibonacci.py
hackerrank/hashmaps/: count_triplets.py  freq_q.py  substrings.py
hackerrank/strings/: classification.py  deletions_count.py  sherlock.py
leetcode_ws/: boats_save_people.py  encode_decode_strs.py  longest_sub.py  maximum_sum_array.py  remove_duplicates_in_place.py
leetcode_ws/arrays/: buy_sell_stock.py  int_to_roman.py  product_except_self.py  two_sum2.py
leetcode_ws/binary_search/: bad_version.py  peak_element.py  perfect_square.py  search_position.py
leetcode_ws/dynamic_programming/: jumpgame.py  staircase.py
leetcode_ws/graphs/: max_num_of_islands.py  max_number_of_fish.py  num_of_islands.py  valid_path.py
leetcode_ws/greedy/: maximum_subarray.py  smallest_number_to_zero.py
leetcode_ws/hashmaps ⁄dicts/: ballon_count.py  group_anagrams.py  jewels_as_stones.py  largest_subsequence.py  lru_cache.py  set_design.py  timemap.py
leetcode_ws/trees/: path_sum.py  (+10 more)
problem_patterns/: __init__.py  frequency_counter.py  two_pointers.py
recursion/: rec_factorial.py  rec_palindrome.py
tests/: test_lc_string_compression.py  test_problem_patterns.py  test_two_pointers.py
(+27 files in other folders)
